--- a/_posts/2014-11-05-Road.md
+++ b/_posts/2014-11-05-Road.md
@@ -2,7 +2,7 @@
 title: 路
 author: windea
 layout: post
-permalink: /archives/7.html
+permalink: /archives/20141105.html
 categories:
   - 网站公告
 ---
@@ -10,3 +10,4 @@ categories:
 走过的路
 眼前的路
 未来的路
+
