Update and rename 2016-12-28-miss-2016.md to 2016-12-28-Miss-2016.md

--- a/_posts/2016-12-28-Miss-2016.md
+++ b/_posts/2016-12-28-Miss-2016.md
@@ -11,6 +11,8 @@ categories:
 
 ---
 
+<img src="http://www.iamyuchao.com/wp-content/uploads/2016/Cover.jpg" style="width:0px;height:0px;overflow:hidden"/>
+
 最近一直在循环蔡健雅的《思念》<a href="http://music.163.com/#/m/song?id=208927&userid=755182" target="_blank">【蔡健雅的《思念》】</a>
 ，安静的曲调，还有Tanya慵懒嗓音，就像冬日午后暖暖的阳光照在身上，照进心里......
 
